// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test that all components are rendering just fine. Render the Footer page 1`] = `
<nav>
  <ul
    className="list-items"
  >
    <li>
      GitHub
    </li>
    <li>
      Facebook
    </li>
    <li>
      <p>
        With ❤ from Bryte
      </p>
    </li>
    <li>
      LinkedIn
    </li>
    <li>
      Twitter
    </li>
  </ul>
</nav>
`;

exports[`Test that all components are rendering just fine. Render the Home page. 1`] = `
<div
  className="content-container"
>
  <div
    className="content"
  >
    <h1>
      Home Page
    </h1>
    <p>
      This shall be our temporary Home page
    </p>
  </div>
</div>
`;

exports[`Test that all components are rendering just fine. Render the Quote page 1`] = `
<div
  className="content-container"
>
  <div
    className="content"
  >
    <h1>
      Quote Page
    </h1>
    <p>
      Our temporary Quote page
    </p>
  </div>
</div>
`;
